# fastapi-saml-example

./: LICENSE  README.org  justfile  main.py  pyproject.toml
saml/: advanced_settings.json  settings.json
saml/certs/: sp.crt  sp.key
